POM: updatePolicy=NEVER was daily

--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,11 @@
       <url>https://maven-repo-254709.appspot.com</url>
       <releases>
         <enabled>true</enabled>
-        <updatePolicy>daily</updatePolicy>
+        <updatePolicy>never</updatePolicy>
       </releases>
       <snapshots>
         <enabled>true</enabled>
-        <updatePolicy>daily</updatePolicy>
+        <updatePolicy>never</updatePolicy>
       </snapshots>
     </repository>
     <repository>
@@ -71,11 +71,11 @@
       <url>https://oss.sonatype.org/content/repositories/google-snapshots/</url>
       <releases>
         <enabled>true</enabled>
-        <updatePolicy>daily</updatePolicy>
+        <updatePolicy>never</updatePolicy>
       </releases>
       <snapshots>
         <enabled>true</enabled>
-        <updatePolicy>daily</updatePolicy>
+        <updatePolicy>never</updatePolicy>
       </snapshots>
     </repository>
   </repositories>
@@ -86,11 +86,11 @@
       <url>https://maven-repo-254709.appspot.com</url>
       <releases>
         <enabled>true</enabled>
-        <updatePolicy>daily</updatePolicy>
+        <updatePolicy>never</updatePolicy>
       </releases>
       <snapshots>
         <enabled>true</enabled>
-        <updatePolicy>daily</updatePolicy>
+        <updatePolicy>never</updatePolicy>
       </snapshots>
     </pluginRepository>
     <pluginRepository>
@@ -98,11 +98,11 @@
       <url>https://oss.sonatype.org/content/repositories/google-snapshots/</url>
       <releases>
         <enabled>true</enabled>
-        <updatePolicy>daily</updatePolicy>
+        <updatePolicy>never</updatePolicy>
       </releases>
       <snapshots>
         <enabled>true</enabled>
-        <updatePolicy>daily</updatePolicy>
+        <updatePolicy>never</updatePolicy>
       </snapshots>
     </pluginRepository>
   </pluginRepositories>
