--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,12 @@
 
     <dependency>
       <groupId>walkingkooka</groupId>
+      <artifactId>walkingkooka-terminal</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>walkingkooka</groupId>
       <artifactId>walkingkooka-tree-expression-convert-provider</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
