--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,8 @@
       </snapshots>
     </repository>
     <repository>
-      <id>google-sonatype-snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/google-snapshots/</url>
+      <id>maven.repository.snapshots</id>
+      <url>https://central.sonatype.org/repository/maven-snapshots/</url>
       <releases>
         <enabled>true</enabled>
         <updatePolicy>never</updatePolicy>
@@ -94,8 +94,8 @@
       </snapshots>
     </pluginRepository>
     <pluginRepository>
-      <id>google-sonatype-snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/google-snapshots/</url>
+      <id>maven.repository.snapshots</id>
+      <url>https://central.sonatype.org/repository/maven-snapshots/</url>
       <releases>
         <enabled>true</enabled>
         <updatePolicy>never</updatePolicy>
