POM: argLine surefire & coverall github actions FIX

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
+    <argLine>-Xmx2G -Duser.language=EN -Duser.region=AU</argLine>
   </properties>
 
   <licenses>
